# aws-resource-mcp

./: .gitignore  README.md  pyproject.toml
.codex/: config.toml
docs/: activity-analysis.md  architecture.md  cost-explorer-consent.md  cost-risk-and-free-tier.md  decisions.md  diagnostics-and-coverage.md  economic-analysis.md  iam-least-privilege.md  iam-manual-setup.md  iam-permissions-matrix.md  inventory-consent-flow.md  phases.md  progress.md  service-adapters.md  zero-cost-policy.md
iam/: aws-resource-mcp-consented-readonly.json  aws-resource-mcp-free-only.json  aws-resource-mcp-permissions-boundary.json  permissions-manifest.json
src/aws_resource_mcp/: __init__.py  config.py  models.py  server.py
src/aws_resource_mcp/activity/: __init__.py  classifier.py  cloudtrail_activity.py  engine.py  models.py
src/aws_resource_mcp/aws/: __init__.py  adapter_engine.py  consent.py  discovery.py  errors.py  identity.py  inventory.py  lambda_inventory.py  (+5 more)
tests/unit/: test_activity_adapters.py  test_activity_classifier.py  test_activity_engine.py  test_activity_models.py  test_adapter_engine.py  test_adapter_registry.py  test_adapters.py  test_cloudtrail_activity.py  test_config.py  test_consent.py  test_cost_explorer_consent.py  test_coverage_diagnostics.py  test_discovery.py  test_economic_models.py  test_free_tier.py  test_health.py  test_identity.py  test_inventory.py  test_lambda_inventory.py  test_operations.py  test_regions.py  test_resource_explorer_inventory.py  test_s3_inventory.py  test_scoped_operation_authorization.py  test_server.py  test_session.py
(+34 files in other folders)
